--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 fastapi>=0.110.0
 uvicorn[standard]>=0.27.1
-sqlmodel>=0.0.14
 python-dotenv>=1.0.1
-alembic>=1.13.1
 pydantic-settings>=2.2.1
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 python-multipart>=0.0.9
-psycopg2-binary>=2.9.9  # PostgreSQL adapter 
+llama-index-core>=0.10.0
+llama-index-embeddings-openai>=0.1.3
+llama-index-llms-openai>=0.1.3
+llama-index-vector-stores-qdrant>=0.1.2
+qdrant-client>=1.7.0
+openai>=1.12.0
+tiktoken>=0.6.0 
