--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-fastapi>=0.110.0
-uvicorn[standard]>=0.27.1
-python-dotenv>=1.0.1
-pydantic-settings>=2.2.1
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-python-multipart>=0.0.9
-llama-index-core>=0.10.0
-llama-index-embeddings-openai>=0.1.3
-llama-index-llms-openai>=0.1.3
-llama-index-vector-stores-qdrant>=0.1.2
+fastapi>=0.115.0
+uvicorn>=0.24.0
+python-jose>=3.3.0
+passlib>=1.7.4
+bcrypt>=4.0.1
+python-multipart>=0.0.6
+pydantic-settings>=2.0.0
+llama-index-core>=0.12.0
+llama-index-llms-openai>=0.3.0
+llama-index-embeddings-openai>=0.3.0
+llama-index-vector-stores-qdrant>=0.4.0
 qdrant-client>=1.7.0
-openai>=1.12.0
-tiktoken>=0.6.0 
+pytest>=8.0.0
+httpx>=0.26.0 
